demo/src/components/PlantFilterBar.css
.bottom-bar {
    position: fixed;
    bottom: 0;
    left: 0;
    width: 100%;
    height: 60px; /* Adjust the height as needed */
    background-color: #d7d6c2ff; /* Added background color */
    box-shadow: 0 -2px 5px rgba(0, 0, 0, 0.5);
    padding: 10px;
    z-index: 2000;
    overflow-x: auto;
    max-height: 40%;
    word-wrap: break-word;
    display: flex;
    align-items: center;
  }
  
  .bottom-bar button {
    display: inline-block;
    margin-right: 20px;
  }
  
  .bottom-bar form {
    display: flex;
    align-items: center;
  }
  
  .bottom-bar form label {
    display: inline-block;
    margin-right: 10px;
    word-wrap: break-word;
  }
  
  .bottom-bar form input {
    width: auto;
    padding: 8px;
    margin-right: 10px;
    box-sizing: border-box;
    word-wrap: break-word;
  }
  
  .bottom-bar form button {
    width: auto;
    padding: 10px;
    background-color: #859c8cff; /* Updated color */
    color: white;
    border: none;
    cursor: pointer;
  }
  
  .bottom-bar form button:hover {
    background-color: #484e32ff; /* Updated color */
  }
  
  @media (max-width: 1024px) {
    .bottom-bar {
      height: 80px;
    }
  }
  
  @media (max-width: 768px) {
    .bottom-bar {
      height: 100px;
    }
  }
  

